selfhost/test/parser/export_error_before_invalid_statement.out
Error at %FILE_NAME%:1:8
Unexpected token 'while', expected one of 'val', 'var', 'func', 'type':
  |  export while true {}
            ^